# tokdelta

./: .gitignore  LICENSE  README.md  pyproject.toml  utils.py
benchmarks/: bench_bottleneck.py  bench_data_structures.py  bench_incremental_vs_full.py
src/: __init__.py  state.py
src/tokdelta/: __init__.py  state.py
src/tokdelta/tokenizer/: __init__.py  base_tokenizer.py  huggingface_tokenizer.py  tiktoken_tokenizer.py  tokenizer_registry.py
tests/: conftest.py  test_agentic.py  test_incremental.py  test_rigorous.py
tokenizer/: __init__.py  huggingface_tokenizer.py  tiktoken_tokenizer.py  tokenizer_registry.py
